Project

General

Profile

Actions

Bug #52275

closed

Interruptive future is not working

Added by Yingxin Cheng over 2 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Interruptive-future somehow doesn't work in some build environment, causing the invalidated transaction visible to the follow-up continuations.

Reproduce: Revert https://github.com/ceph/ceph/pull/42781 and run unittest-staged-fltree.

Working:
- debian sid + clang 13
- centos 8.4 + gcc 10
- ubuntu 20.04 + gcc 11

Not working:
- ubuntu 20.04 + clang 10
- ubuntu 20.04 + clang 13
- ubuntu 20.04 + gcc 9


Related issues 1 (0 open1 closed)

Related to crimson - Bug #52259: unittest-staged-fltree failsResolvedYingxin Cheng

Actions
Actions #1

Updated by Yingxin Cheng over 2 years ago

  • Related to Bug #52259: unittest-staged-fltree fails added
Actions #2

Updated by Kefu Chai over 2 years ago

  • Priority changed from Normal to High
Actions #3

Updated by Xuehan Xu over 2 years ago

it seems that release build can reproduce this issue in the centos build environment

Actions #4

Updated by Xuehan Xu over 2 years ago

  • Pull request ID set to 42798

I think I've found the root cause

Actions #5

Updated by Kefu Chai over 2 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Xuehan Xu
Actions #6

Updated by Kefu Chai over 2 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF